#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */
struct atkbdc_softc {int /*<<< orphan*/  mtx; } ;

/* Variables and functions */
 int /*<<< orphan*/  atkbdc_aux_poll (struct atkbdc_softc*) ; 
 int /*<<< orphan*/  atkbdc_kbd_poll (struct atkbdc_softc*) ; 
 int /*<<< orphan*/  pthread_mutex_lock (int /*<<< orphan*/ *) ; 
 int /*<<< orphan*/  pthread_mutex_unlock (int /*<<< orphan*/ *) ; 

void
atkbdc_event(struct atkbdc_softc *sc, int iskbd)
{
	pthread_mutex_lock(&sc->mtx);

	if (iskbd)
		atkbdc_kbd_poll(sc);
	else
		atkbdc_aux_poll(sc);
	pthread_mutex_unlock(&sc->mtx);
}